--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,128 @@
+@article{Traube1899,
+author = {Traube, J},
+journal = {Vortr},
+pages = {19--322},
+title = {{Samml. them. u. them.-techn}},
+volume = {4},
+year = {1899}
+}
+@article{Nozaki1971,
+abstract = {The solubilities of amino acids, diglycine, and triglycine have been measured in water and aqueous ethanol as well as dioxane solutions. Free energies of transfer of amino acid side chains and backbone peptide units from water to ethanol and dioxane solutions have been calculated from these data. The results show the similarity between the effects of ethanol and dioxane on the stability of those side chains and peptide units. In particular, the free energies of transfer of hydrophobic side chains to 100{\%} ethanol and dioxane are essentially identical, and have been used to establish a hydrophobicity scale for hydrophobic side chains.},
+author = {Nozaki, Yasuhiko and Tanford, Charles},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Nozaki, Tanford - 1971 - The Solubility of Amino in Aqueous Ethanol Acids and Two Glycine Dioxane Solutions Peptides.pdf:pdf},
+isbn = {0021-9258 (Print)$\backslash$n0021-9258 (Linking)},
+issn = {0021-9258, 1083-351X},
+journal = {The Journal of Biological Chemistry},
+number = {7},
+pages = {2211--2217},
+pmid = {5555568},
+title = {{The Solubility of Amino in Aqueous Ethanol Acids and Two Glycine Dioxane Solutions Peptides}},
+url = {http://www.jbc.org/content/246/7/2211.short},
+volume = {246},
+year = {1971}
+}
+@book{Cohn1943,
+abstract = {This book is not a systematic treatise on the chemistry of amino acids, peptides and proteins or even on the physical chemistry of these important substances. It deals with them from the limited point of view of the number and distribution of the electrical charges they bear and the "implications of their charged structure for their physical properties and their physicochemical interaction with other molecules." The field covered by the monograph was opened by the studies of Debye and H{\"{u}}ckel on the interionic forces in electrolyte solutions and by the work of Bjerrum, who demonstrated that aliphatic amino acids, even in the isoelectric state, bear positively and negatively charged ionic groups, by virtue of which they react as zwitterionen, or dipolar ions. By applying these fundamental concepts to theoretical and experimental studies of amino acids, peptides and proteins, the authors and their associates have paved the way to new and},
+author = {Cohn, Edwin J. and Edsall, John T. and Kirkwood, John G. and Mueller, Hans and Oncley, J. L. and Scatchard, George},
+booktitle = {The American Journal of the Medical Sciences},
+doi = {10.1097/00000441-194306000-00035},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Cohn, Edsall - 1943 - Proteins, amino acids and peptides as ions and dipolar ions (American Chemical Society. Monograph series).pdf:pdf},
+issn = {0002-9629},
+number = {6},
+pages = {884},
+title = {{Proteins, amino acids and peptides as ions and dipolar ions}},
+url = {http://www.amazon.com/Proteins-peptides-American-Chemical-Monograph/dp/B0007DRGN4},
+volume = {205},
+year = {1943}
+}
+@article{Hine1975,
+author = {Hine, Jack and Mookerjee, Pradip K.},
+doi = {10.1021/jo00891a006},
+issn = {0022-3263},
+journal = {The Journal of Organic Chemistry},
+month = {feb},
+number = {3},
+pages = {292--298},
+title = {{Structural effects on rates and equilibriums. XIX. Intrinsic hydrophilic character of organic compounds. Correlations in terms of structural contributions}},
+url = {http://pubs.acs.org/doi/abs/10.1021/jo00891a006},
+volume = {40},
+year = {1975}
+}
+@article{Cohn1934,
+author = {Cohn, Edwin J. and McMeekin, Thomas L. and Edsall, John T. and Blanchard, Muriel H.},
+doi = {10.1021/ja01319a006},
+issn = {0002-7863},
+journal = {Journal of the American Chemical Society},
+month = {apr},
+number = {4},
+pages = {784--794},
+title = {{Studies in the Physical Chemistry of Amino Acids, Peptides and Related Substances. I. The Apparent Molal Volume and the Electrostriction of the Solvent}},
+url = {http://pubs.acs.org/doi/abs/10.1021/ja01319a006},
+volume = {56},
+year = {1934}
+}
+@article{Cohn1934a,
+author = {Cohn, Edwin J. and McMeekin, Thomas L. and Edsall, John T. and Blanchard, Muriel H.},
+doi = {10.1021/ja01319a006},
+issn = {0002-7863},
+journal = {Journal of the American Chemical Society},
+month = {apr},
+number = {4},
+pages = {784--794},
+title = {{Studies in the Physical Chemistry of Amino Acids, Peptides and Related Substances. I. The Apparent Molal Volume and the Electrostriction of the Solvent}},
+url = {http://pubs.acs.org/doi/abs/10.1021/ja01319a006},
+volume = {56},
+year = {1934}
+}
+@article{Wolfenden1979,
+abstract = {The absolute affinities of amino acid side chains for solvent water closely match their relative distributions between the surface and the interior of native proteins and are associated with a remarkable bias in the genetic code.},
+author = {Wolfenden, R V and Cullis, P M and Southgate, C C},
+doi = {10.1126/SCIENCE.493962},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Wolfenden, Cullis, Southgate - 1979 - Water, protein folding, and the genetic code.pdf:pdf},
+issn = {0036-8075},
+journal = {Science (New York, N.Y.)},
+month = {nov},
+number = {4418},
+pages = {575--7},
+pmid = {493962},
+publisher = {American Association for the Advancement of Science},
+title = {{Water, protein folding, and the genetic code.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/493962},
+volume = {206},
+year = {1979}
+}
+@article{Murzin1995,
+abstract = {To facilitate understanding of, and access to, the information available for protein structures, we have constructed the Structural Classification of Proteins (scop) database. This database provides a detailed and comprehensive description of the structural and evolutionary relationships of the proteins of known structure. It also provides for each entry links to co-ordinates, images of the structure, interactive viewers, sequence data and literature references. Two search facilities are available. The homology search permits users to enter a sequence and obtain a list of any structures to which it has significant levels of sequence similarity. The key word search finds, for a word entered by the user, matches from both the text of the scop database and the headers of Brookhaven Protein Databank structure files. The database is freely accessible on World Wide Web (WWW) with an entry point to URL http://scop.mrc-lmb.cam.ac.uk/scop/ scop: an old English poet or minstrel (Oxford English Dictionary); ckon: pile, accumulation (Russian Dictionary).},
+author = {Murzin, Alexey G. and Brenner, Steven E. and Hubbard, Tim and Chothia, Cyrus},
+doi = {10.1016/S0022-2836(05)80134-2},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Murzin et al. - 1995 - SCOP A structural classification of proteins database for the investigation of sequences and structures.pdf:pdf},
+issn = {0022-2836},
+journal = {Journal of Molecular Biology},
+month = {apr},
+number = {4},
+pages = {536--540},
+publisher = {Academic Press},
+title = {{SCOP: A structural classification of proteins database for the investigation of sequences and structures}},
+url = {https://www.sciencedirect.com/science/article/pii/S0022283605801342},
+volume = {247},
+year = {1995}
+}
+@article{Tamm2004,
+abstract = {Beta-barrel membrane proteins occur in the outer membranes of Gram-negative bacteria, mitochondria and chloroplasts. The membrane-spanning sequences of $\beta$-barrel membrane proteins are less hydrophobic than those of $\alpha$-helical membrane proteins, which is probably the main reason why completely different folding and membrane assembly pathways have evolved for these two classes of membrane proteins. Some $\beta$-barrel membrane proteins can be spontaneously refolded into lipid bilayer model membranes in vitro. They may also have this ability in vivo although lipid and protein chaperones likely assist with their assembly in appropriate target membranes. This review summarizes recent work on the thermodynamic stability and the mechanism of membrane insertion of $\beta$-barrel membrane proteins in lipid model and biological membranes. How lipid compositions affect folding and assembly of $\beta$-barrel membrane proteins is also reviewed. The stability of these proteins in membranes is not as large as previously thought ({\textless}10 kcal/mol) and is modulated by elastic forces of the lipid bilayer. Detailed kinetic studies indicate that $\beta$-barrel membrane proteins fold in distinct steps with several intermediates that can be characterized in vitro. Formation of the barrel is synchronized with membrane insertion and all $\beta$-hairpins insert simultaneously in a concerted pathway.},
+author = {Tamm, Lukas K. and Hong, Heedeok and Liang, Binyong},
+doi = {10.1016/J.BBAMEM.2004.06.011},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Tamm, Hong, Liang - 2004 - Folding and assembly of $\beta$-barrel membrane proteins.pdf:pdf},
+issn = {0005-2736},
+journal = {Biochimica et Biophysica Acta (BBA) - Biomembranes},
+month = {nov},
+number = {1-2},
+pages = {250--263},
+publisher = {Elsevier},
+title = {{Folding and assembly of $\beta$-barrel membrane proteins}},
+url = {https://www.sciencedirect.com/science/article/pii/S0005273604001646},
+volume = {1666},
+year = {2004}
+}
 @article{Gentle2004,
 abstract = {Integral proteins in the outer membrane of mitochondria control all aspects of organelle biogenesis, being required for protein import, mitochondrial fission, and, in metazoans, mitochondrial aspects of programmed cell death. How these integral proteins are assembled in the outer membrane had been unclear. In bacteria, Omp85 is an essential component of the protein insertion machinery, and we show that members of the Omp85 protein family are also found in eukaryotes ranging from plants to humans. In eukaryotes, Omp85 is present in the mitochondrial outer membrane. The gene encoding Omp85 is essential for cell viability in yeast, and conditional omp85 mutants have defects that arise from compromised insertion of integral proteins like voltage-dependent anion channel (VDAC) and components of the translocase in the outer membrane of mitochondria (TOM) complex into the mitochondrial outer membrane.},
 author = {Gentle, Ian and Gabriel, Kipros and Beech, Peter and Waller, Ross and Lithgow, Trevor},
