added aims of thesis

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -390,6 +390,7 @@ Whilst the focus of this thesis is primarily on \gls{tmh}s it is important to ac
 		PDB code 4HYO.
 		C) A 7\--\gls{tmh} \gls{gpcr} that recieves a signal on one side of the membrane which causes a conformational change influencing the structural arrangement of the tertiary structure on the opposing side of the membrane.
 		PDB code 1F88.
+		Note the pore in the $\protect\beta$ barrel protein not present in either the \gls{tmh} channel or the \gls{tmh} transducer.
 		}
 \label{fig:barrel-versus-helix}
 \end{figure}
@@ -441,6 +442,18 @@ Besides the differences in biogenesis between $\beta$ barrel \gls{tmp}s and \gls
 Membrane spanning $\beta$ sheets exhibit a ``positive\--outside'' distribution of positively charged residues \cite{Pogozheva2013}, opposed to the much more typical positive\--inside distribution \cite{VonHeijne1989, Andersson1992, Pogozheva2013, Sharpe2010, Baeza-Delgado2013}.
 Typically, $\beta$ sheets are less hydrophobic than \gls{tmh}s \cite{Tamm2004} as a result of their amphiphilic nature.
 
-
-
 \section{Aims of This Thesis.}
+
+In this thesis we explore three ideas surrouding the role of \gls{tmh}s in the membrane.
+
+In chapter 2 we explore the sequence composition of large datasets of \gls{tmh}s straifying them by species, organelle, single\--pass and multi\--pass.
+After considering the rarity of certain amino acid types, we ellucidate a ``negative\--outside'' tendency in concert with the positive\--inside rule.
+We go on to further divide the single\--pass group into complex and simple \gls{tmh}s according to TMSOC.
+This reveals that simple \gls{tmh}s have amino acid distribution features along the helix that would optimise for anchoring, however complex \gls{tmh}s are more akin to \gls{tmh}s from multi\--pass \gls{tmp}s.
+
+In chapter 3 we generate an up to date dataset of post\--translationally inserted \gls{ta} proteins based on previous methods and compare the \gls{tmh}s within to a manually curated \gls{ta} protein dataset from UniProt.
+This cross examination revealed \gls{tmh} adaptaions to mitochondrial membranes such as a reversal of the ``positive\--inside'' rule and a reduction in hydrophobicity caused by an abundance of alanine residues in lieu of leucine rather than an increase of polar residues.
+We also generate homology models of two spontanously inserting \gls{tmh}s from \gls{ta} proteins and show that they have an amphiphatic surface which may be key to their insertion.
+
+In chapter 4 we look at families of \gls{tmp} that exhibit high hydrophobic discrepency between sequentially adjacent \gls{tmh}s.
+The conservation of these pairs across the families corroborates evidence of cooperative \gls{tmh} insertion, showing that marginally hydrophobic \gls{tmh}s could use typical \gls{tmh}s as part of their biogenesis.
